<resources>
    <string name="app_name">Market</string>
    <string name="obhStoimost">Общая стоимость:</string>
    <string name="kupit">К ЗАКАЗУ</string>
    <string name="zakazat">ЗАКАЗАТЬ</string>
    <string name="adres_dostavki">Адреса доставки:</string>
    <string name="izmenit">ИЗМЕНИТЬ</string>
    <string name="sposob_oplati">Способ доставки</string>
    <string name="kurier">Курьеру наличными</string>
    <string name="oformlenie_zakaza">Оформление заказа</string>
    <string name="adres">Адрес</string>
    <string name="fio">Ф.И.О.</string>
    <string name="dobavit_adres">Добавить новый адрес</string>
    <string name="dobavit_adres_dostavki">Добавить адрес доставки</string>
    <string name="kont_lico">Контактное лицо</string>
    <string name="nnomer_mobilnogo">Номер мобильного</string>
    <string name="ulica">Улица, абонентский ящик и т.п.</string>
    <string name="kvartira">Квартира, корпус, и т.п.</string>
    <string name="oblast">Республика/область/край</string>
    <string name="gorod">Город</string>
    <string name="index">Почтовый индекс</string>
    <string name="adres_umolhanie">Задать как по умолчанию</string>
    <string name="soxranit">СОХРАНИТЬ</string>
    <string name="rub">руб.</string>
    <string name="punkt">Пункт выдачи</string>
    <string name="post">Почтой</string>
    <string name="nomer_zakaza">Номер заказа:</string>
    <string name="vremia_zakaza">Время заказа</string>
    <string name="kolihestvo">Количество</string>
    <string name="itogo">Итого:</string>
    <string name="ya_ihu">Я ищу...</string>
    <string name="todo">TODO</string>
    <string name="korzina">Корзина</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nahat_pokupki">НАЧАТЬ ПОКУПКИ</string>
    <string name="v_korzinu">В КОРЗИНУ</string>
    <string name="oformit">ОФОРМИТЬ</string>
    <string name="utohnenie_zakaza">Внимание! Окончательная сумма заказа известна в день доставки после 9:00.</string>
    <string name="email">Email:</string>
    <string name="zvezda">*</string>
    <string name="telefon">Телефон:</string>
    <string name="komment_zakaza">Комментарий к заказу:</string>
    <string name="dostavka">Доставка</string>
    <string name="kurer_slujba">Курьерская служба 0 руб.</string>
    <string name="predlag_skidki">Мы предлагаем гибкую систему скидок!</string>
    <string name="skidka_zavisit">Скидка зависит от суммы заказа при покупке.</string>
    <string name="skidka_tolko_s_telefonom">Только при вводе телефона в требуемом формате!</string>
    <string name="skidka_3pr_1">от 300 руб. скидка -</string>
    <string name="one_proc">1%</string>
    <string name="two_proc">2%</string>
    <string name="tri_proc">3%</string>
    <string name="four_proc">4%</string>
    <string name="five_proc">5%</string>
    <string name="skidka_5pr_1">от 500 руб. скидка -</string>
    <string name="poluhi_skidku">Получите персональную скидку!</string>
    <string name="pri_summe_zakazov">При сумме всех заказов:</string>
    <string name="bolee500">- более 500 руб. скидка - </string>
    <string name="bolee1000">- более 1 000 руб. скидка - </string>
    <string name="bolee2000">- более 2 00 руб. скидка - </string>
    <string name="bolee3000">- более 3 00 руб. скидка - </string>
    <string name="bolee4000">- более 4 00 руб. скидка - </string>
    <string name="skidki_ne_summ">Скидки не суммируются!</string>
    <string name="oform_zakaz">Оформить заказ</string>
    <string name="vvedi_promo">Введите промокод:</string>
    <string name="zakaz_ot_70_rub">Общая сумма заказа должна составлять не менее 70 рублей</string>
    <string name="spasibo_zakaz">Спасибо за заказ!</string>
    <string name="razmerniy_riad">Размерный ряд:</string>
    <string name="ves_upakovki">Вес упаковки:</string>
    <string name="title_activity_bokovoe_menu">BokovoeMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="chetverg_mail">info@chetverg.by</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Продукция</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">+375 (29) 344-65-65</string>
    <string name="menu_send">Send</string>
    <string name="kontakti">Контакты</string>
</resources>
