<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KorzinaActivity">

    <Button
        android:id="@+id/btKorzinaK_Pokupkam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/backgrbelizakruglzeleniy"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin"
        android:text="@string/nahat_pokupki"
        android:textColor="@color/fon_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shirinaPanelek"
        android:background="@color/herniy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/korzina"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ibKorzinaDelTovari"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.1"
            android:background="@color/herniy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chMain"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_name" />

        <ImageButton
            android:id="@+id/ibKorzinaDelTovari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.1"
            android:background="@color/herniy"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bt_delete" />

        <CheckBox
            android:id="@+id/chMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.1"
            android:buttonTint="@color/colorAccent"
            android:checked="false"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvKorzCountVibrannix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_weight="0.1"
            android:background="@drawable/layout_bg"
            android:paddingLeft="2dp"
            android:paddingRight="@dimen/otstup_mejdu_panelkami"
            android:textColor="@color/fon_color"
            android:textSize="@dimen/text_micro"
            app:layout_constraintBottom_toBottomOf="@+id/ibKorzinaDelTovari"
            app:layout_constraintEnd_toEndOf="@+id/ibKorzinaDelTovari"
            app:layout_constraintTop_toTopOf="@+id/ibKorzinaDelTovari"
            app:layout_constraintVertical_bias="1.0"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrolTovari"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="1dp"
        app:layout_constraintBottom_toTopOf="@+id/conLayKorzinaBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layTop">

        <LinearLayout
            android:id="@+id/linerLayKorzina"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical" />

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conLayKorzinaBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shirinaPanelek"
        android:background="@drawable/bg_png"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obhStoimost"
                android:textColor="@color/seriy_riba" />

            <TextView
                android:id="@+id/tvKorzinaKOplateSkolkoVsego"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/seriy_riba"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btKupit"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/layout_bg"
            android:text="@string/kupit"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
